[feature/Apps]: A new batch of game apps

--- a/payload/Apps/sdlpop/app.ini
+++ b/payload/Apps/sdlpop/app.ini
@@ -1,5 +1,5 @@
-Title=Wolf4SDL
-Author=AlumiuN, lazd, genderbent
+Title=SDLPoP
+Author=NagyD, genderbent
 Startup=run.sh
 Kernel=false
 Readme=readme.txt
