[misc]: make config.ini contents match what the release zip build creates

--- a/payload/Autobleem/bin/autobleem/config.ini
+++ b/payload/Autobleem/bin/autobleem/config.ini
@@ -1,10 +1,12 @@
 [AutoBleem]
 Adv=true
+Aspect=false
 Cfg=/media/Autobleem/rc/autobleem_cfg.sh
-Mip=true
+Mip=false
 Nomusic=false
+Origames=true
 Pcsx=bleemsync
 Retroarch=true
-Theme=default
-Version=v0.5.0
-Raconfig=true
+Theme=aergb
+UI=EvolutionUI
+Version=v0.8.7
