--- a/payload/themes/evolution/theme.ini
+++ b/payload/themes/evolution/theme.ini
@@ -6,8 +6,18 @@ Logo=ab.png
 Font=zrnic.ttf
 Background=background.jpg
 
+Circle=circle.png
+Cross=cross.png
+Square=square.png
+Triangle=triangle.png
+Start=start.png
+Select=select.png
+L1=l1.png
+R1=r1.png
+
 Iconw=30
 Iconh=30
+
 
 IconRescan=705
 IconExit=600
