--- a/payload/Apps/retroboot/app.ini
+++ b/payload/Apps/retroboot/app.ini
@@ -1,5 +1,5 @@
-Title=RetroBoot 
-Author=genderbent
+Title=Retroboot (RetroArch)
+Author=(C)2020 genderbent
 Startup=run.sh
 Kernel=false
 Readme=readme.txt
