--- a/payload/Apps/amiberry/app.ini
+++ b/payload/Apps/amiberry/app.ini
@@ -1,5 +1,5 @@
-Title=Amiberry-PSC Amiga Emulator
-Author=(C)2019 Screemerpl/AutoBleem Team
+Title=Amiberry Amiga Emulator
+Author=(C)2020 Screemerpl/AutoBleem Team
 Startup=run.sh
 Kernel=true
 Readme=readme.txt
