[develop]: App updates via RB_Patch for Retroarch 1.2.1

--- a/payload/Apps/amiberry/conf/amiberry.conf
+++ b/payload/Apps/amiberry/conf/amiberry.conf
@@ -17,31 +17,15 @@ config_path=/media/Apps/amiberry/conf/
 controllers_path=/media/retroarch/autoconfig/
 retroarch_config=/media/Apps/amiberry/conf/retroarch.cfg
 rom_path=/media/Apps/amiberry/kickstarts/
-ROMs=4
-ROMName=KS ROM v1.3 (A500,A1000,A2000) rev 34.5 (256k) [315093-02]
-ROMPath=/media/Apps/amiberry/kickstarts/kick13.rom
-ROMType=256
-ROMName=KS ROM v3.1 (A1200) rev 40.68 (512k) [391773-01/391774-01]
-ROMPath=/media/Apps/amiberry/kickstarts/kick31.rom
-ROMType=256
+ROMs=3
 ROMName=Freezer: HRTMon v2.37 (built-in)
 ROMPath=:HRTMon
 ROMType=524291
 ROMName= AROS KS ROM (built-in) (1024k)
 ROMPath=:AROS
 ROMType=256
-MRUDiskList=13
-Diskfile=/media/Apps/amiberry/adf/superfrog/Superfrog2.adf
-Diskfile=/media/Apps/amiberry/adf/superfrog/Superfrog1.adf
-Diskfile=/media/Apps/amiberry/adf/lotusturbosprit2/Lotus_2.adf
-Diskfile=/media/Apps/amiberry/adf/ugh/Ugh!.adf
-Diskfile=/media/Apps/amiberry/adf/desertstrike/Destrik3.adf
-Diskfile=/media/Apps/amiberry/adf/desertstrike/Destrik2.adf
-Diskfile=/media/Apps/amiberry/adf/desertstrike/Destrik1.adf
-Diskfile=/media/Apps/amiberry/adf/ufo_aga/UFO4.adf
-Diskfile=/media/Apps/amiberry/adf/ufo_aga/UFO3.adf
-Diskfile=/media/Apps/amiberry/adf/ufo_aga/UFO1.adf
-Diskfile=/media/Apps/amiberry/adf/ufo_aga/UFO2.adf
-Diskfile=/media/Apps/amiberry/adf/benefactor/Benefac1.adf
-Diskfile=/media/Apps/amiberry/adf/benefactor/Benefac2.adf
+ROMName=kick13
+ROMPath=/media/Apps/amiberry/kickstarts/kick13.rom
+ROMType=256
+MRUDiskList=0
 MRUCDList=0
