--- a/payload/Apps/shadowwarrior/app.ini
+++ b/payload/Apps/shadowwarrior/app.ini
@@ -1,5 +1,5 @@
-Title=Shadow Warrior (JFSW)
-Author=(C)2020 JonoF, genderbent
+Title=Shadow Warrior
+Author=JonoF, genderbent
 Startup=run.sh
 Kernel=false
 Readme=readme.txt
