--- a/payload/Apps/eduke32/app.ini
+++ b/payload/Apps/eduke32/app.ini
@@ -1,5 +1,5 @@
-Title=Duke Nukem 3D (EDuke32)
-Author=(C)2020 helixhorned, hendricks266, tx, genderbent
+Title=Duke Nukem 3D
+Author=helixhorned, hendricks266, tx, genderbent
 Startup=run.sh
 Kernel=false
 Readme=readme.txt
