--- a/payload/Apps/openbor/app.ini
+++ b/payload/Apps/openbor/app.ini
@@ -1,7 +1,6 @@
-Title=OpenBOR (Beats of Rage)
-Author=(C)2020 AutoBleem Team 
+Title=OpenBOR
+Author=Screemer, KMFDManic, genderbent
 Startup=run.sh
 Kernel=false
 Readme=readme.txt
 Image=icon.png
-
