--- a/payload/Apps/opentyrian/app.ini
+++ b/payload/Apps/opentyrian/app.ini
@@ -1,5 +1,5 @@
-Title=Tyrian (OpenTyrian)
-Author=(C)2020 Mindless, yuriks, syntaxglitch, genderbent
+Title=Tyrian
+Author=genderbent
 Startup=run.sh
 Kernel=false
 Readme=readme.txt
