--- a/payload/Apps/sdlpop/app.ini
+++ b/payload/Apps/sdlpop/app.ini
@@ -1,5 +1,5 @@
-Title=Prince of Persia (SDLPoP)
-Author=(C)2020 NagyD, genderbent
+Title=Prince of Persia
+Author=NagyD, genderbent
 Startup=run.sh
 Kernel=false
 Readme=readme.txt
