--- a/payload/Apps/wolf4sdl/app.ini
+++ b/payload/Apps/wolf4sdl/app.ini
@@ -1,5 +1,5 @@
-Title=Wolfenstein 3D (Wolf4SDL)
-Author=(C)2020 AlumiuN, lazd, genderbent
+Title=Wolfenstein 3D
+Author=AlumiuN, lazd, genderbent
 Startup=run.sh
 Kernel=false
 Readme=readme.txt
